# Compute-Vision

./: CMakeLists.txt
cmake/: FindDependency.cmake  Findopencv.cmake  functions.cmake
src/: main.cpp
